# fantasy

./: .gitignore  .replit  package-lock.json  package.json  pyproject.toml  replit.md
.local/state/replit/: log-query.db-shm  log-query.db-wal
attached_assets/: Pasted-Act-as-an-Expert-Full-Stack-Developer-and-System-Archit_1772025224596.txt
backend/: Dockerfile  create_admin.py  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: auth.py  gameweeks.py  leaderboard.py  minileagues.py  players.py  stats.py  teams.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/services/: points_engine.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/minileagues/: page.tsx
frontend/app/register/: page.tsx
frontend/app/squad/: page.tsx
frontend/app/vote/: page.tsx
frontend/components/: MaintenanceGuard.tsx  Navbar.tsx  PitchView.tsx
frontend/lib/: api.ts  auth.ts  firebase.ts
